--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<a href="images/Escape.jpg" class="image fit"><img src="images/Escape.jpg" /></a>
 									<p>A story told with Python, where you make all the decisions and reap the benefits or suffer the consequences.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Code</a></li>
+										<li><a href="https://repl.it/@DonjVu/Escape-with-python#main.py" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -98,7 +98,7 @@
 									<a href="images/bitcoin.gif" class="image fit"><img src="images/bitcoin.gif" alt="" /></a>
 									<p>A script using python that notifies users of price drops in bitcoin.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Code</a></li>
+										<li><a href="https://github.com/DonjVu/Bitcoin-Tracker/blob/main/tracker.py" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
